examples/invalid/types/nonconststr.mcl

void main() {
    str hello = "Hello World!";
}